<resources>
    <string name="app_name">FinWise</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_child">Register Your Child</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_register">Don\'t have an account? <font color="#058B47">Register</font></string>
    <string name="reset_password">Reset Password</string>
    <string name="password_reset">Password Reset!</string>
    <string name="sucessful_reset">Your password has been \n successfully reset.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="birthday">Birthday</string>

    <string name="my_goals">My Goals</string>
    <string name="new_goal">+ New Goal</string>
    <string name="new_goal_text">New Goal</string>
    <string name="edit_goal_text">Edit Goal</string>
    <string name="goal">Goal</string>
    <string name="activity">Activity</string>
    <string name="amount">Amount</string>
    <string name="target_date">Target Date</string>
    <string name="review_goal">Review Goal</string>
    <string name="description">Description</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="number_of_takes">Number of Takes</string>
    <string name="question">Question</string>
    <string name="add_new_question">+ Add New Question</string>
    <string name="add_new_choices">+ Add New Choice</string>
    <string name="area">Area </string>
    <string name="date_created">Date Created</string>
    <string name="date_modified">Date Modified</string>
    <string name="summary">Summary </string>
    <string name="overall_percentage">Overall Percentage</string>
    <string name="low_correct_answers">Low Correct Answer</string>
    <string name="number">Number</string>
    <string name="title_add_new_choice">Add New Choice</string>
    <string name="input_choice">Input Choice</string>
    <string name="error_new_choice">Please Input a Choice</string>


    <string name="get_started">Get Started!</string>
    <string name="get_started_2">Get Started</string>
    <string name="goal_progress">Goal Progress</string>
    <string name="goal_details">Goal Details</string>
    <string name="goal_name">Goal Name</string>
    <string name="date_set">Date Set</string>
    <string name="decision_making_activities">Decision Making Activities</string>
    <string name="start_working"> Start working on your goal!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="have_accomplished_goal">You have accomplished your goal.</string>
    <string name="status">Status</string>
    <string name="finish">Finish</string>

    <string name="saving">Saving</string>
    <string name="savings">Savings</string>
    <string name="view_all">View All</string>
    <string name="deposit">+ Deposit</string>
    <string name="deposit_history">Deposit History</string>
    <string name="budgeting">Budgeting</string>
    <string name="budget">Budget</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="spend_on">What I Need to Spend On</string>
    <string name="new_category">+ New Category</string>
    <string name="title_new_category">New Category</string>
    <string name="category">Category</string>
    <string name="category_items">Category Items</string>
    <string name="add_item">+ Add Item</string>
    <string name="title_add_item">Add Item</string>
    <string name="spending">Spending</string>
    <string name="expense_1">Expense</string>
    <string name="budget_spent">Budget Spent</string>
    <string name="expense_2">+ Expense</string>
    <string name="spending_categories">Spending Categories</string>
    <string name="total_spending">Total Spending</string>
    <string name="spending_history">Spending History</string>
    <string name="expense_category">Expense Category</string>
    <string name="category_item">Item Name</string>
    <string name="take_assessment">Take Assessment</string>
    <string name="assessment_name">Assessment Name</string>

    <string name="view_deposits">View Deposits</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="setting_a_goal">Setting A Goal</string>
    <string name="review">Review</string>
    <string name="get_started_soon">Get Started Soon!</string>
    <string name="sent_to_parent">Your goal will be sent to your parent, Name for approval.</string>
    <string name="smart_rating">SMART Rating</string>
    <string name="specific">Specific</string>
    <string name="measureable">Measurable</string>
    <string name="achievable">Achievable</string>
    <string name="relevant">Relevant</string>
    <string name="time_bound">Time Bound</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="children">Children</string>
    <string name="add_child">+ Add Child</string>
    <string name="name">Name</string>
    <string name="budget_set">Budget Set</string>
    <string name="rank">Rank</string>
    <string name="overall_performance">Overall Performance</string>
    <string name="friends_ranking">Friends Ranking</string>
    <string name="goal_setting">Goal Setting</string>
    <string name="child_name">Child Name</string>
    <string name="note">Note</string>


    <string name="savings_deposit">Savings Deposit</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="withdraw">- Withdraw</string>
    <string name="title_withdraw">Withdraw From Goal</string>
    <string name="confirm_withdrawal">Confirm Withdrawal</string>

    <string name="date">Date</string>
    <string name="deposit_amount">Deposit Amount</string>
    <string name="transaction_history">Transaction History</string>
    <string name="current_balance_child">Current Balance of Child</string>
    <string name="send_money">+ Send Money</string>
    <string name="goal_settings">Goal Settings</string>
    <string name="your_previous_score">Your Previous Score</string>

    <string name="goal_savings_available">Goal Savings Available</string>
    <string name="budget_item">Budget Item</string>
    <string name="new_item">+ New Item</string>
    <string name="budget_expense">Budget Expense</string>
    <string name="record_expense">Record Expense</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="merchant">Merchant</string>
    <string name="current_balance">Current Balance</string>
    <string name="updated_balance">Updated Balance</string>
    <string name="price">Price</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>

    <string name="remaining_budget">Remaining Budget</string>


    <string name="error_budget_category">Cannot input amount greater than budget</string>

    <string name="done_setting_budget">Done Setting Budget</string>
    <string name="done_spending">Done Spending</string>


    <string-array name="status_list">
        <item>In Progress</item>
        <item>For Review</item>
        <item>For Editing</item>
        <item>Disapproved</item>
        <item>Achieved</item>
    </string-array>

    <string-array name="transaction_type_list">
        <item>All</item>
        <item>Expense</item>
        <item>Income</item>
        <item>Goal</item>
    </string-array>

    <string-array name="goal_status_list">
        <item>Approved</item>
        <item>For Editing</item>
        <item>Disapproved</item>
    </string-array>

    <string-array name="decision_making_activities_list">
        <item>In Progress</item>
        <item>For Review</item>
        <item>For Editing</item>
        <item>Disapproved</item>
        <item>Achieved</item>
    </string-array>

    <string-array name="assessment_question_difficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>

    </string-array>

    <string name="title_decision_making_activities">Financial Decision Making Activities</string>


    <string-array name="financial_activity">
        <item>Buying Items</item>
        <item>Planning An Event</item>
        <item>Saving For Emergency Funds</item>
        <item>Donating To Charity</item>
        <item>Situational Shopping</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="pfm_income_category">
        <item>Allowance</item>
        <item>Gift</item>
        <item>Reward</item>
        <item>Other</item>
    </string-array>

    <string-array name="payment_type">
        <item>Cash</item>
        <item>Maya</item>
    </string-array>

    <string-array name="pfm_expense_category">
        <item>Clothing</item>
        <item>Food &amp; Drinks</item>
        <item>Toys &amp; Games</item>
        <item>Gift</item>
        <item>Entertainment</item>
        <item>Transportation</item>
        <item>Personal Care</item>
        <item>Decorations</item>
        <item>Rental</item>
        <item>Party Favors</item>
        <item>Miscellaneous</item>
        <item>Others</item>
    </string-array>

    <string-array name="income_destination">
        <item>Personal Finance</item>
        <item>Financial Goal</item>
    </string-array>

    <string-array name="assessment_question_status">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>

    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>