<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".financialActivitiesModule.ChildNewGoal"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:text="@string/edit_goal_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_new_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/goal"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/goal"
        android:ems="10"
        android:inputType="text"
        android:textSize="14dp"
        />

    <TextView
        android:id="@+id/tv_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:textAllCaps = "true"
        android:text="@string/activity"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:entries="@array/financial_activity"
        android:layout_marginTop="5dp"
        android:textSize="14dp"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinner_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:textAllCaps = "true"
        android:text="@string/amount"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/amount"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14dp"
        />

    <TextView
        android:id="@+id/tv_target_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:textAllCaps = "true"
        android:text="@string/target_date"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <DatePicker
        android:id="@+id/et_target_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_target_date"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_grey"
            android:background="@drawable/button_border_grey"
            android:layout_marginRight="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_green"
            android:text="@string/save"
            android:textColor="@color/off_white"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/back"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        android:background="@drawable/button_border_grey"
        />


</androidx.constraintlayout.widget.ConstraintLayout>