<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_new_category"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/title_new_category"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_new_category"
        app:layout_constraintBottom_toTopOf="@id/linear_layout2"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style= "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextEnabled="true"
            app:helperText=""
            app:helperTextTextColor="@color/red"
            android:paddingBottom="10dp"
            android:paddingTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_et_category_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="text"
                android:textSize="16dp"
                android:hint="@string/category"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style= "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:helperTextEnabled="true"
            app:helperText=""
            app:helperTextTextColor="@color/red"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_et_category_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:inputType="numberDecimal"
                android:textSize="16dp"
                android:hint="@string/amount"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/error_budget_category"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear_layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:backgroundTint="@color/light_grey"
            android:background="@drawable/button_border_grey"
            android:layout_marginRight="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/dark_green"
            android:text="@string/save"
            android:textColor="@color/off_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>