<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordResetActivity"
    android:padding="20dp"
    android:background="@color/light_green">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:background="@drawable/layout_bg">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/password_reset"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/password_reset"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/sucessful_reset"
            android:gravity="center"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/dark_green"
            android:textColor="@color/off_white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_border"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>